--- a/hw1/Makefile
+++ b/hw1/Makefile
@@ -2,12 +2,15 @@ TARGET = hw1
 SOURCE = hw1.cxx
 CC = g++
 LIBS = `root-config --libs`
-CFAGS = `root-config --cflags`
+CFLAGS = `root-config --cflags`
+COMIPLEFLAGS = -fPIC -m -g -Wall -O2
+
 all: $(TARGET)
 
 $(TARGET):
 	$(CC) $(SOURCE) -o $(TARGET) $(LIBS) $(CFLAGS)
 
 clean:
+	touch $(TARGET)
 	rm $(TARGET)
 	rm *~
