Finish hw1,put dayabay style into common include dir

--- a/hw4/Makefile
+++ b/hw4/Makefile
@@ -2,7 +2,7 @@ TARGET = hw4
 SOURCE = $(TARGET).cxx
 CC = g++
 LIBS = `root-config --libs`
-CFLAGS = `root-config --cflags`
+CFLAGS = `root-config --cflags` -I../include
 COMIPLEFLAGS = -fPIC -g -Wall -O2
 
 all:$(TARGET)
